# scratchi

./: .cursorrules  .envrc  .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: output-quality-improvements.md  plan-recommendation-engine.md  polars-migration-plan.md  recommendations-accuracy-robustness.md  remaining-work-prioritized.md
scripts/: generate_samples.py  test_phase1.py  test_phase1_1.py
src/scratchi/: __init__.py  main.py
src/scratchi/agents/: __init__.py  base.py  cost.py  coverage.py  exclusion.py  limit.py
src/scratchi/cli/: __init__.py  args.py  main.py
src/scratchi/config/: __init__.py  settings.py
src/scratchi/data_loader/: __init__.py  loader.py
src/scratchi/models/: __init__.py  constants.py  plan.py  recommendation.py  user.py
src/scratchi/profiling/: __init__.py  agent.py
src/scratchi/reasoning/: __init__.py  builder.py  templates.py
tests/: __init__.py
tests/test_agents/: __init__.py  test_cost.py  test_coverage.py  test_exclusion.py  test_limit.py  test_missing_data.py
tests/test_cli/: __init__.py  test_args.py
tests/test_data/: test_loader.py  test_parsing_edge_cases.py
tests/test_integration/: __init__.py  test_pipeline.py
tests/test_models/: test_benefit_matching.py  test_plan.py  test_plan_aggregation.py  test_user.py
tests/test_profiling/: __init__.py  test_agent.py
tests/test_reasoning/: __init__.py  test_builder.py
tests/test_recommend/: __init__.py  test_engine.py  test_formatter.py
tests/test_scoring/: __init__.py  test_algorithm_validation.py  test_orchestrator.py
(+5 files in other folders)
