[project]
name = "scratchi"
version = "0.1.0"
description = "Agentic Scratch Paper"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Taylor Cochran", email = "tcochran.dev@gmail.com"},
]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
main = "scratchi.main:main"

[tool.uv]
package = true
